--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,6 +11,11 @@ main {
     padding-left: 5px;
     padding-right: 5px;
 }
+
+.vl {
+    border-left: solid 1px;
+}
+
 .resa-btn {
     background-color : white;
     color : black;
